--- a/src/oodj_assignment/Add_item.form
+++ b/src/oodj_assignment/Add_item.form
@@ -98,6 +98,9 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JTextField" name="Price">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PriceActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="Supplier">
       <Properties>
@@ -110,6 +113,9 @@
           </StringArray>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SupplierActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
@@ -126,6 +132,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Save"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SaveActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
@@ -184,6 +193,9 @@
       </AuxValues>
     </Component>
     <Component class="javax.swing.JTextField" name="Item_name">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Item_nameActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="Stock">
       <Events>
